--- a/iis3/.README.md
+++ b/iis3/.README.md
@@ -195,9 +195,70 @@ en Internet
 ![](imagen2/23.PNG)
 
 
-* Configuración y creación del sitio Drupal: configurar idioma español; instalar módulo
-gtranslate y habilitar traducción a varios idiomas; instalar y configurar temas Marinelli, Zen y
-Fusion; crear dos o tres páginas de contenido, crear menú Primary Links y colocar como
-bloque. Otras opciones de configuración que desees.
+## Configuración y creación del sitio Drupal:
+
+
+* Configurar idioma español; instalar módulo gtranslate y habilitar traducción a varios idiomas;
 
 ![](imagen2/24.PNG)
+
+**Configuramos el acceso a la base de datos con el usuario cms.**
+
+![](drupal/2.PNG)
+
+![](drupal/3.PNG)
+
+**Configuramos el sitio**
+
+![](drupal/4.PNG)
+
+![](drupal/5.PNG)
+
+#### Drupal instalado correctamente.
+
+![](drupal/7.PNG)
+
+    * Instalar y configurar temas Marinelli, Zen y Fusion;
+
+**Descargamos los temas y los descomprimimos, luego los subimos vía FTP por Filezilla desde la conexión del servidor hasta la ruta del cliente.**
+
+![](drupal/21.PNG)
+
+![](drupal/20.PNG)
+
+
+    * Configuramos el tema como principal.
+![](drupal/17.PNG)
+
+
+      * Crear dos o tres páginas de contenido.
+
+![](drupal/8.PNG)
+
+![](drupal/9.PNG)
+
+![](drupal/10.PNG)
+
+![](drupal/11.PNG)
+
+**Comprobamos las paginas creadas.**
+
+![](drupal/12.PNG)
+
+
+* Crear menú Primary Links y colocar como
+bloque. Otras opciones de configuración que desees.
+
+
+![](drupal/13.PNG)
+
+![](drupal/14.PNG)
+
+** Creamos el Bloque y lo ponemos como encabezado.**
+
+![](drupal/15.PNG)
+
+
+**Comprobación.**
+
+![](drupal/18.PNG)
